# web-demo

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  cliff.toml  config.toml.example  deny.toml
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
entity/: Cargo.toml
entity/src/: account.rs  chat_message_history.rs  chat_session.rs  lib.rs  oauth_account.rs  prelude.rs
entity/tests/: soft_delete_test.rs
macros/: Cargo.toml
macros/src/: lib.rs  rate_limit.rs  soft_delete.rs  with_transaction.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250410_081256_account.rs
src/: api_doc.rs  configs.rs  constants.rs  db.rs  error.rs  logger.rs  main.rs  response.rs  routes.rs  states.rs
src/app/user/: mod.rs  schemas.rs  url.rs  view.rs
src/app/user/models/: account.rs  edu_account.rs  edu_student.rs  edu_teacher.rs  mod.rs  prelude.rs
src/apps/: mod.rs
src/apps/auth/: jwt.rs  mod.rs  oauth2.rs  schemas.rs  view.rs
src/apps/user/: api_doc.rs  constants.rs  mod.rs  schemas.rs  view.rs
src/entity/: account.rs  mod.rs  prelude.rs
src/helper/: crypto.rs  github.rs  mod.rs  sms.rs  tools.rs
src/project/: configs.rs  db.rs  error.rs  extractor.rs  logger.rs  mod.rs  pagination.rs  redis.rs  response.rs
src/project/middlewares/: auth.rs  response.rs
