[package]
name = "web-demo"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration", "entity"]

[workspace.dependencies]
sea-orm = { version = "1.1.10", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
] }

serde = { version = "1.0.228", features = ["derive"] }


[dependencies]
migration = { path = "migration" }
entity = { path = "entity" }
axum = "0.8.7"
serde = { workspace = true }
serde_json = "1.0.145"
tokio = { version = "1.45.1", features = ["full"] }
# 日志
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace", "compression-br"] }
# orm
sea-orm = { workspace = true }
# 错误处理
thiserror = "2.0.17"
# 日期处理
chrono = "0.4.42"
uuid = { version = "1.18.1", features = ["v4"] }
# 字段校验
validator = { version = "0.20.0", features = ["derive"] }
serde_repr = "0.1.20"
# 环境配置
config = "0.15.19"
http-body-util = "0.1.3"
