[package]
name = "web-demo"
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]
members = [".", "entity", "macros"]

# workspace 级共享依赖（子 crate 通过 `workspace = true` 引用）
[workspace.dependencies]
# ORM（PostgreSQL + tokio 运行时 + derive 宏 + schema 同步 + entity 注册表）
sea-orm = { version = "=2.0.0-rc.36", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
    "schema-sync",
    "entity-registry",
] }
# 序列化 / 反序列化
serde = { version = "1.0.228", features = ["derive"] }
# 日期时间
chrono = "0.4.42"

[dependencies]
# 内部模块
entity = { path = "entity" }

# Web 框架
axum = "0.8.9"

# 异步运行时（full: signal、net、time 等全部子模块）
tokio = { version = "1.52.3", features = ["full"] }

# 中间件
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["trace", "compression-br"] }

# ORM
sea-orm = { workspace = true }

# 日志
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-appender = "0.2.5"

# 序列化 / 反序列化
serde = { workspace = true }
serde_json = "1.0.150"

# 错误处理
thiserror = "2.0.17"

# 日期 / 唯一标识
chrono = { workspace = true }
uuid = { version = "1.23.3", features = ["v4"] }

# 字段校验
validator = { version = "0.20.0", features = ["derive"] }

# 配置文件加载（默认 feature 包含 toml 解析）
config = "0.15.23"

# HTTP body 工具（中间件读取响应 body）
http-body-util = "0.1.3"

# OpenAPI 文档生成 + Scalar UI
utoipa = { version = "5.5.0", features = ["chrono", "axum_extras"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }

[dev-dependencies]
# mock 数据库连接（仅测试使用）
sea-orm = { workspace = true, features = ["mock"] }
